--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "@popperjs/core": "^2.11.6",
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
-        "@vitejs/plugin-vue": "*",
         "autoprefixer": "^10.4.16",
         "axios": "^1.7.4",
         "bootstrap": "^5.2.3",
@@ -18,7 +17,6 @@
         "postcss": "^8.4.32",
         "sass": "^1.56.1",
         "tailwindcss": "^3.4.0",
-        "vite": "^6.0.11",
-        "vue": "*"
+        "vite": "^6.0.11"
     }
 }
